# g

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: cli.rs  git.rs  main.rs  model.rs  ssh.rs  util.rs
src/cli/: error.rs  mod.rs  pres.rs
src/git/: error.rs  mod.rs
src/profile/: active.rs  cache.rs  error.rs  mod.rs  model.rs  profile.rs
src/ssh/: client.rs  config.rs  error.rs  key.rs  mod.rs
src/ssh/key/: mod.rs  type.rs
