[package]
name = "g"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
git2 = "0.19.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
ssh-key = { version = "0.6.6", features = ["ed25519", "std", "alloc"] }
regex = "1.10.5"
ssh-agent-client-rs = "0.9.1"
thiserror = "1.0.61"
