[package]
name = "g-rs"
version = "1.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["git", "cli"]
categories = ["command-line-utilities"]
description = "cli tool for managing multiple git profiles"
repository = "https://github.com/jakublaba/g"
exclude = [
    ".idea/**",
    ".github/**",
    ".gitignore"
]

[[bin]]
name = "g"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
git2 = "0.19.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
ssh-key = { version = "0.6.6", features = ["ed25519", "std", "alloc"] }
regex = "1.10.5"
anyhow = "1.0.86"
