[package]
name = "g-rs"
version = "2.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["git", "cli"]
categories = ["command-line-utilities"]
description = "cli tool for managing multiple git profiles"
repository = "https://github.com/jakublaba/g"
exclude = [
    ".idea/**",
    ".github/**",
    ".gitignore"
]

[[bin]]
name = "g"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
rand = "0.8.5"
git2 = "0.19.0"
serde = { version = "1.0.204", features = ["derive"] }
ssh-key = { version = "0.6.6", features = ["dsa", "ed25519", "rsa"] }
regex = "1.10.5"
bincode = "1.3.3"
thiserror = "1.0.63"
const_format = "0.2.32"
